nuevas estadisticas en finaliza identificacion

--- a/src/app/pages/projects/identification/identification.component.html
+++ b/src/app/pages/projects/identification/identification.component.html
@@ -1180,7 +1180,7 @@
             </a>
             <ng-template ngbNavContent>
                 
-                <div class="row">
+                <!--<div class="row">
                     <div class="col-sm-12">
                         <div class="row mb-3">
                             
@@ -1229,19 +1229,271 @@
                             </div>
                         </div>
                     </div>
+                  </div>-->
+
+                  <div class="row">
+                    <div class="col-sm-12">
+                        <div class="row mb-3 align-items-center justify-content-center">
+                            
+                            <div class="col-md-1" style="width: 11.33%;">
+                                <div class="card card-animate">
+                                    <div class="card-body">
+                                        <div class="d-flex justify-content-between">
+                                            <div>
+                                                <p class="fw-medium text-muted mb-0">Cuerpos legales</p>
+                                                <h2 class="mt-4 ff-secondary fw-semibold">
+                                                    <span [CountTo]="countCuerposLegales()" class="counter-value" [from]="0" [duration]="1"></span>
+                                                </h2>
+                                            </div>
+                                            <!--<div>
+                                                <div class="avatar-sm flex-shrink-0">
+                                                    <span class="avatar-title bg-soft-info rounded-circle fs-2">
+                                                        <i-feather name="users" class="text-info feather-icon-align"></i-feather>
+                                                    </span>
+                                                </div>
+                                            </div>-->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                            <div class="col-md-1"  style="width: 11.33%;">
+                                <div class="card card-animate">
+                                    <div class="card-body">
+                                        <div class="d-flex justify-content-between">
+                                            <div>
+                                                <p class="fw-medium text-muted mb-0">Artículos</p>
+                                                <h2 class="mt-4 ff-secondary fw-semibold">
+                                                    <span [CountTo]="countArticulos()" class="counter-value" [from]="0" [duration]="1"></span>
+                                                </h2>
+                                            </div>
+                                            <!--<div>
+                                                <div class="avatar-sm flex-shrink-0">
+                                                    <span class="avatar-title bg-soft-info rounded-circle fs-2">
+                                                        <i-feather name="users" class="text-info feather-icon-align"></i-feather>
+                                                    </span>
+                                                </div>
+                                            </div>-->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                            <div class="col-md-1"  style="width: 11.33%;">
+                                <div class="card card-animate">
+                                    <div class="card-body">
+                                        <div class="d-flex justify-content-between">
+                                            <div>
+                                                <p class="fw-medium text-muted mb-0">Instancias de cumplimiento</p>
+                                                <h2 class="mt-4 ff-secondary fw-semibold">
+                                                    <span [CountTo]="countArticulos()" class="counter-value" [from]="0" [duration]="1"></span>
+                                                </h2>
+                                            </div>
+                                            <!--<div>
+                                                <div class="avatar-sm flex-shrink-0">
+                                                    <span class="avatar-title bg-soft-info rounded-circle fs-2">
+                                                        <i-feather name="users" class="text-info feather-icon-align"></i-feather>
+                                                    </span>
+                                                </div>
+                                            </div>-->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                            <div class="col-md-1"  style="width: 11.33%;">
+                                <div class="card card-animate">
+                                    <div class="card-body">
+                                        <div class="d-flex justify-content-between">
+                                            <div>
+                                                <p class="fw-medium text-muted mb-0">Permisos</p>
+                                                <h2 class="mt-4 ff-secondary fw-semibold">
+                                                    <span [CountTo]="countArticulos()" class="counter-value" [from]="0" [duration]="1"></span>
+                                                </h2>
+                                            </div>
+                                            <!--<div>
+                                                <div class="avatar-sm flex-shrink-0">
+                                                    <span class="avatar-title bg-soft-info rounded-circle fs-2">
+                                                        <i-feather name="users" class="text-info feather-icon-align"></i-feather>
+                                                    </span>
+                                                </div>
+                                            </div>-->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                            <div class="col-md-1"  style="width: 11.33%;">
+                                <div class="card card-animate">
+                                    <div class="card-body">
+                                        <div class="d-flex justify-content-between">
+                                            <div>
+                                                <p class="fw-medium text-muted mb-0">Reportes</p>
+                                                <h2 class="mt-4 ff-secondary fw-semibold">
+                                                    <span [CountTo]="countArticulos()" class="counter-value" [from]="0" [duration]="1"></span>
+                                                </h2>
+                                            </div>
+                                            <!--<div>
+                                                <div class="avatar-sm flex-shrink-0">
+                                                    <span class="avatar-title bg-soft-info rounded-circle fs-2">
+                                                        <i-feather name="users" class="text-info feather-icon-align"></i-feather>
+                                                    </span>
+                                                </div>
+                                            </div>-->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                            <div class="col-md-1"  style="width: 11.33%;">
+                                <div class="card card-animate">
+                                    <div class="card-body">
+                                        <div class="d-flex justify-content-between">
+                                            <div>
+                                                <p class="fw-medium text-muted mb-0">Monitoreos</p>
+                                                <h2 class="mt-4 ff-secondary fw-semibold">
+                                                    <span [CountTo]="countArticulos()" class="counter-value" [from]="0" [duration]="1"></span>
+                                                </h2>
+                                            </div>
+                                            <!--<div>
+                                                <div class="avatar-sm flex-shrink-0">
+                                                    <span class="avatar-title bg-soft-info rounded-circle fs-2">
+                                                        <i-feather name="users" class="text-info feather-icon-align"></i-feather>
+                                                    </span>
+                                                </div>
+                                            </div>-->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                            <div class="col-md-1"  style="width: 11.33%;">
+                                <div class="card card-animate">
+                                    <div class="card-body">
+                                        <div class="d-flex justify-content-between">
+                                            <div>
+                                                <p class="fw-medium text-muted mb-0">Otras obligaciones</p>
+                                                <h2 class="mt-4 ff-secondary fw-semibold">
+                                                    <span [CountTo]="countArticulos()" class="counter-value" [from]="0" [duration]="1"></span>
+                                                </h2>
+                                            </div>
+                                            <!--<div>
+                                                <div class="avatar-sm flex-shrink-0">
+                                                    <span class="avatar-title bg-soft-info rounded-circle fs-2">
+                                                        <i-feather name="users" class="text-info feather-icon-align"></i-feather>
+                                                    </span>
+                                                </div>
+                                            </div>-->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-md-1"  style="width: 11.33%;">
+                                <div class="card card-animate">
+                                    <div class="card-body">
+                                        <div class="d-flex justify-content-between">
+                                            <div>
+                                                <p class="fw-medium text-muted mb-0">Elementos y actividades</p>
+                                                <h2 class="mt-4 ff-secondary fw-semibold">
+                                                    <span [CountTo]="countArticulos()" class="counter-value" [from]="0" [duration]="1"></span>
+                                                </h2>
+                                            </div>
+                                            <!--<div>
+                                                <div class="avatar-sm flex-shrink-0">
+                                                    <span class="avatar-title bg-soft-info rounded-circle fs-2">
+                                                        <i-feather name="users" class="text-info feather-icon-align"></i-feather>
+                                                    </span>
+                                                </div>
+                                            </div>-->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                        </div>
+                    </div>
                   </div>
 
-                <div class="row mb-3">
+                <div class="row mb-3 align-items-center justify-content-center">
                     
-                    <div class="col-sm-8">
+                    <div class="col-sm-4">
                         <h4>Cuerpos Legales</h4>
-                        <apx-chart [series]="basicBarChartCuerpos.series" [chart]="basicBarChartCuerpos.chart" [dataLabels]="basicBarChartCuerpos.dataLabels" [legend]="basicBarChartCuerpos.legend" [plotOptions]="basicBarChartCuerpos.plotOptions" [xaxis]="basicBarChartCuerpos.xaxis" [colors]="basicBarChartCuerpos.colors" dir="ltr"></apx-chart>
+                        <!--<apx-chart [series]="basicBarChartCuerpos.series" [chart]="basicBarChartCuerpos.chart" [dataLabels]="basicBarChartCuerpos.dataLabels" [legend]="basicBarChartCuerpos.legend" [plotOptions]="basicBarChartCuerpos.plotOptions" [xaxis]="basicBarChartCuerpos.xaxis" [colors]="basicBarChartCuerpos.colors" dir="ltr"></apx-chart>-->
+
+                        <apx-chart [series]="simpleDonutChart.series" [chart]="simpleDonutChart.chart"
+                        [labels]="simpleDonutChart.labels" [responsive]="simpleDonutChart.responsive"
+                        [legend]="simpleDonutChart.legend" [dataLabels]="simpleDonutChart.dataLabels"
+                        [colors]="simpleDonutChart.colors" dir="ltr"></apx-chart>
+
                     </div>
 
+                    
+                    <div class="col-sm-4">
+                        <h4>Artículos</h4>
+                        
+                        <apx-chart [series]="simpleDonutChart.series" [chart]="simpleDonutChart.chart"
+                        [labels]="simpleDonutChart.labels" [responsive]="simpleDonutChart.responsive"
+                        [legend]="simpleDonutChart.legend" [dataLabels]="simpleDonutChart.dataLabels"
+                        [colors]="simpleDonutChart.colors" dir="ltr"></apx-chart>
+
+                    </div>
+
+                    
+                    <div class="col-sm-4">
+                        <h4>Instancias de cumplimiento</h4>
+                        <apx-chart [series]="simpleDonutChart.series" [chart]="simpleDonutChart.chart"
+                        [labels]="simpleDonutChart.labels" [responsive]="simpleDonutChart.responsive"
+                        [legend]="simpleDonutChart.legend" [dataLabels]="simpleDonutChart.dataLabels"
+                        [colors]="simpleDonutChart.colors" dir="ltr"></apx-chart>
+
+                    </div>
                 </div>
 
                 
-                <div class="row">
+                <div class="row mb-3 align-items-center justify-content-center">
+                    
+                    <div class="col-sm-3">
+                        <h4>Permisos</h4>
+                        <apx-chart [series]="simpleDonutChart.series" [chart]="simpleDonutChart.chart"
+                        [labels]="simpleDonutChart.labels" [responsive]="simpleDonutChart.responsive"
+                        [legend]="simpleDonutChart.legend" [dataLabels]="simpleDonutChart.dataLabels"
+                        [colors]="simpleDonutChart.colors" dir="ltr"></apx-chart>
+
+                    </div>
+
+                    
+                    <div class="col-sm-3">
+                        <h4>Reportes</h4>
+                        
+                        <apx-chart [series]="simpleDonutChart.series" [chart]="simpleDonutChart.chart"
+                        [labels]="simpleDonutChart.labels" [responsive]="simpleDonutChart.responsive"
+                        [legend]="simpleDonutChart.legend" [dataLabels]="simpleDonutChart.dataLabels"
+                        [colors]="simpleDonutChart.colors" dir="ltr"></apx-chart>
+
+                    </div>
+
+                    
+                    <div class="col-sm-3">
+                        <h4>Monitoreos</h4>
+                        <apx-chart [series]="simpleDonutChart.series" [chart]="simpleDonutChart.chart"
+                        [labels]="simpleDonutChart.labels" [responsive]="simpleDonutChart.responsive"
+                        [legend]="simpleDonutChart.legend" [dataLabels]="simpleDonutChart.dataLabels"
+                        [colors]="simpleDonutChart.colors" dir="ltr"></apx-chart>
+
+                    </div>
+
+                    <div class="col-sm-3">
+                        <h4>Otras obligaciones</h4>
+                        <apx-chart [series]="simpleDonutChart.series" [chart]="simpleDonutChart.chart"
+                        [labels]="simpleDonutChart.labels" [responsive]="simpleDonutChart.responsive"
+                        [legend]="simpleDonutChart.legend" [dataLabels]="simpleDonutChart.dataLabels"
+                        [colors]="simpleDonutChart.colors" dir="ltr"></apx-chart>
+
+                    </div>
+                </div>
+
+                <!--<div class="row">
                     <div class="col-sm-12">
                         <div class="row mb-3">
                             
@@ -1299,7 +1551,7 @@
                         <apx-chart [series]="basicBarChartArticulos.series" [chart]="basicBarChartArticulos.chart" [dataLabels]="basicBarChartArticulos.dataLabels" [legend]="basicBarChartArticulos.legend" [plotOptions]="basicBarChartArticulos.plotOptions" [xaxis]="basicBarChartArticulos.xaxis" [colors]="basicBarChartArticulos.colors" dir="ltr"></apx-chart>
                     </div>
 
-                </div>
+                </div>-->
             </ng-template>
         </li>
         <li [ngbNavItem]="2" class="nav-item waves-effect waves-light">
