--- a/src/app/pages/projects/identification/identification.component.html
+++ b/src/app/pages/projects/identification/identification.component.html
@@ -1286,7 +1286,7 @@
                                             <div>
                                                 <p class="fw-medium text-muted mb-0">Instancias de cumplimiento</p>
                                                 <h2 class="mt-4 ff-secondary fw-semibold">
-                                                    <span [CountTo]="countArticulos()" class="counter-value" [from]="0" [duration]="1"></span>
+                                                    <span [CountTo]="countArticulos() * countElementos()" class="counter-value" [from]="0" [duration]="1"></span>
                                                 </h2>
                                             </div>
                                             <!--<div>
@@ -1308,7 +1308,7 @@
                                             <div>
                                                 <p class="fw-medium text-muted mb-0">Permisos</p>
                                                 <h2 class="mt-4 ff-secondary fw-semibold">
-                                                    <span [CountTo]="countArticulos()" class="counter-value" [from]="0" [duration]="1"></span>
+                                                    <span [CountTo]="countAtributo('permiso')" class="counter-value" [from]="0" [duration]="1"></span>
                                                 </h2>
                                             </div>
                                             <!--<div>
@@ -1330,7 +1330,7 @@
                                             <div>
                                                 <p class="fw-medium text-muted mb-0">Reportes</p>
                                                 <h2 class="mt-4 ff-secondary fw-semibold">
-                                                    <span [CountTo]="countArticulos()" class="counter-value" [from]="0" [duration]="1"></span>
+                                                    <span [CountTo]="countAtributo('reporte')" class="counter-value" [from]="0" [duration]="1"></span>
                                                 </h2>
                                             </div>
                                             <!--<div>
@@ -1352,7 +1352,7 @@
                                             <div>
                                                 <p class="fw-medium text-muted mb-0">Monitoreos</p>
                                                 <h2 class="mt-4 ff-secondary fw-semibold">
-                                                    <span [CountTo]="countArticulos()" class="counter-value" [from]="0" [duration]="1"></span>
+                                                    <span [CountTo]="countAtributo('monitoreo')" class="counter-value" [from]="0" [duration]="1"></span>
                                                 </h2>
                                             </div>
                                             <!--<div>
@@ -1374,7 +1374,7 @@
                                             <div>
                                                 <p class="fw-medium text-muted mb-0">Otras obligaciones</p>
                                                 <h2 class="mt-4 ff-secondary fw-semibold">
-                                                    <span [CountTo]="countArticulos()" class="counter-value" [from]="0" [duration]="1"></span>
+                                                    <span [CountTo]="countAtributo()" class="counter-value" [from]="0" [duration]="1"></span>
                                                 </h2>
                                             </div>
                                             <!--<div>
@@ -1396,7 +1396,7 @@
                                             <div>
                                                 <p class="fw-medium text-muted mb-0">Elementos y actividades</p>
                                                 <h2 class="mt-4 ff-secondary fw-semibold">
-                                                    <span [CountTo]="countArticulos()" class="counter-value" [from]="0" [duration]="1"></span>
+                                                    <span [CountTo]="countElementos()" class="counter-value" [from]="0" [duration]="1"></span>
                                                 </h2>
                                             </div>
                                             <!--<div>
