--- a/src/app/pages/projects/create/evaluation/task-control/task-control.component.html
+++ b/src/app/pages/projects/create/evaluation/task-control/task-control.component.html
@@ -50,7 +50,7 @@
             
             <div class="col-md-4">
                 <h6>RESPONSABLE</h6>
-                {{articulo.evaluations && articulo.evaluations.evaluador && articulo.evaluations.evaluador.nombre ? articulo.evaluations.evaluador.nombre : evaluation.evaluador.nombre }}
+                {{articulo.evaluations && articulo.evaluations.evaluador && articulo.evaluations.evaluador.nombre ? articulo.evaluations.evaluador.nombre : (evaluation.evaluador && evaluation.evaluador.nombre ? evaluation.evaluador.nombre : '-') }}
             </div>
             
           </div>
