--- a/src/app/pages/projects/identification/identification.component.html
+++ b/src/app/pages/projects/identification/identification.component.html
@@ -1308,7 +1308,7 @@
                                             <div>
                                                 <p class="fw-medium text-muted mb-0">Permisos</p>
                                                 <h2 class="mt-4 ff-secondary fw-semibold">
-                                                    <span [CountTo]="countAtributo('permiso')" class="counter-value" [from]="0" [duration]="1"></span>
+                                                    <span [CountTo]="countAtributo('permiso')" class="counter-value" [from]="0" [duration]="1">{{countAtributo('permiso') < 1 ? 0 : ''}}</span>
                                                 </h2>
                                             </div>
                                             <!--<div>
@@ -1330,7 +1330,7 @@
                                             <div>
                                                 <p class="fw-medium text-muted mb-0">Reportes</p>
                                                 <h2 class="mt-4 ff-secondary fw-semibold">
-                                                    <span [CountTo]="countAtributo('reporte')" class="counter-value" [from]="0" [duration]="1"></span>
+                                                    <span [CountTo]="countAtributo('reporte')" class="counter-value" [from]="0" [duration]="1">{{countAtributo('reporte') < 1 ? 0 : ''}}</span>
                                                 </h2>
                                             </div>
                                             <!--<div>
@@ -1352,7 +1352,7 @@
                                             <div>
                                                 <p class="fw-medium text-muted mb-0">Monitoreos</p>
                                                 <h2 class="mt-4 ff-secondary fw-semibold">
-                                                    <span [CountTo]="countAtributo('monitoreo')" class="counter-value" [from]="0" [duration]="1"></span>
+                                                    <span [CountTo]="countAtributo('monitoreo')" class="counter-value" [from]="0" [duration]="1">{{countAtributo('monitoreo') < 1 ? 0 : ''}}</span>
                                                 </h2>
                                             </div>
                                             <!--<div>
@@ -1374,7 +1374,7 @@
                                             <div>
                                                 <p class="fw-medium text-muted mb-0">Otras obligaciones</p>
                                                 <h2 class="mt-4 ff-secondary fw-semibold">
-                                                    <span [CountTo]="countAtributo()" class="counter-value" [from]="0" [duration]="1"></span>
+                                                    <span [CountTo]="countAtributo()" class="counter-value" [from]="0" [duration]="1">{{countAtributo() < 1 ? 0 : ''}}</span>
                                                 </h2>
                                             </div>
                                             <!--<div>
@@ -1432,10 +1432,10 @@
                     <div class="col-sm-4">
                         <h4>Artículos</h4>
                         
-                        <apx-chart [series]="simpleDonutChart.series" [chart]="simpleDonutChart.chart"
-                        [labels]="simpleDonutChart.labels" [responsive]="simpleDonutChart.responsive"
-                        [legend]="simpleDonutChart.legend" [dataLabels]="simpleDonutChart.dataLabels"
-                        [colors]="simpleDonutChart.colors" dir="ltr"></apx-chart>
+                        <apx-chart [series]="simpleDonutChartArticulos.series" [chart]="simpleDonutChartArticulos.chart"
+                        [labels]="simpleDonutChartArticulos.labels" [responsive]="simpleDonutChartArticulos.responsive"
+                        [legend]="simpleDonutChartArticulos.legend" [dataLabels]="simpleDonutChartArticulos.dataLabels"
+                        [colors]="simpleDonutChartArticulos.colors" dir="ltr"></apx-chart>
 
                     </div>
 
