datos reales graficas identificacion

--- a/src/app/pages/projects/identification/identification.component.html
+++ b/src/app/pages/projects/identification/identification.component.html
@@ -1421,10 +1421,10 @@
                         <h4>Cuerpos Legales</h4>
                         <!--<apx-chart [series]="basicBarChartCuerpos.series" [chart]="basicBarChartCuerpos.chart" [dataLabels]="basicBarChartCuerpos.dataLabels" [legend]="basicBarChartCuerpos.legend" [plotOptions]="basicBarChartCuerpos.plotOptions" [xaxis]="basicBarChartCuerpos.xaxis" [colors]="basicBarChartCuerpos.colors" dir="ltr"></apx-chart>-->
 
-                        <apx-chart [series]="simpleDonutChart.series" [chart]="simpleDonutChart.chart"
-                        [labels]="simpleDonutChart.labels" [responsive]="simpleDonutChart.responsive"
-                        [legend]="simpleDonutChart.legend" [dataLabels]="simpleDonutChart.dataLabels"
-                        [colors]="simpleDonutChart.colors" dir="ltr"></apx-chart>
+                        <apx-chart [series]="simpleDonutChartCuerpos.series" [chart]="simpleDonutChartCuerpos.chart"
+                        [labels]="simpleDonutChartCuerpos.labels" [responsive]="simpleDonutChartCuerpos.responsive"
+                        [legend]="simpleDonutChartCuerpos.legend" [dataLabels]="simpleDonutChartCuerpos.dataLabels"
+                        [colors]="simpleDonutChartCuerpos.colors" dir="ltr"></apx-chart>
 
                     </div>
 
@@ -1442,10 +1442,10 @@
                     
                     <div class="col-sm-4">
                         <h4>Instancias de cumplimiento</h4>
-                        <apx-chart [series]="simpleDonutChart.series" [chart]="simpleDonutChart.chart"
-                        [labels]="simpleDonutChart.labels" [responsive]="simpleDonutChart.responsive"
-                        [legend]="simpleDonutChart.legend" [dataLabels]="simpleDonutChart.dataLabels"
-                        [colors]="simpleDonutChart.colors" dir="ltr"></apx-chart>
+                        <apx-chart [series]="simpleDonutChartInstancias.series" [chart]="simpleDonutChartInstancias.chart"
+                        [labels]="simpleDonutChartInstancias.labels" [responsive]="simpleDonutChartInstancias.responsive"
+                        [legend]="simpleDonutChartInstancias.legend" [dataLabels]="simpleDonutChartInstancias.dataLabels"
+                        [colors]="simpleDonutChartInstancias.colors" dir="ltr"></apx-chart>
 
                     </div>
                 </div>
@@ -1455,10 +1455,10 @@
                     
                     <div class="col-sm-3">
                         <h4>Permisos</h4>
-                        <apx-chart [series]="simpleDonutChart.series" [chart]="simpleDonutChart.chart"
-                        [labels]="simpleDonutChart.labels" [responsive]="simpleDonutChart.responsive"
-                        [legend]="simpleDonutChart.legend" [dataLabels]="simpleDonutChart.dataLabels"
-                        [colors]="simpleDonutChart.colors" dir="ltr"></apx-chart>
+                        <apx-chart [series]="simpleDonutChartPermisos.series" [chart]="simpleDonutChartPermisos.chart"
+                        [labels]="simpleDonutChartPermisos.labels" [responsive]="simpleDonutChartPermisos.responsive"
+                        [legend]="simpleDonutChartPermisos.legend" [dataLabels]="simpleDonutChartPermisos.dataLabels"
+                        [colors]="simpleDonutChartPermisos.colors" dir="ltr"></apx-chart>
 
                     </div>
 
@@ -1466,29 +1466,29 @@
                     <div class="col-sm-3">
                         <h4>Reportes</h4>
                         
-                        <apx-chart [series]="simpleDonutChart.series" [chart]="simpleDonutChart.chart"
-                        [labels]="simpleDonutChart.labels" [responsive]="simpleDonutChart.responsive"
-                        [legend]="simpleDonutChart.legend" [dataLabels]="simpleDonutChart.dataLabels"
-                        [colors]="simpleDonutChart.colors" dir="ltr"></apx-chart>
+                        <apx-chart [series]="simpleDonutChartReportes.series" [chart]="simpleDonutChartReportes.chart"
+                        [labels]="simpleDonutChartReportes.labels" [responsive]="simpleDonutChartReportes.responsive"
+                        [legend]="simpleDonutChartReportes.legend" [dataLabels]="simpleDonutChartReportes.dataLabels"
+                        [colors]="simpleDonutChartReportes.colors" dir="ltr"></apx-chart>
 
                     </div>
 
                     
                     <div class="col-sm-3">
                         <h4>Monitoreos</h4>
-                        <apx-chart [series]="simpleDonutChart.series" [chart]="simpleDonutChart.chart"
-                        [labels]="simpleDonutChart.labels" [responsive]="simpleDonutChart.responsive"
-                        [legend]="simpleDonutChart.legend" [dataLabels]="simpleDonutChart.dataLabels"
-                        [colors]="simpleDonutChart.colors" dir="ltr"></apx-chart>
+                        <apx-chart [series]="simpleDonutChartMonitoreos.series" [chart]="simpleDonutChartMonitoreos.chart"
+                        [labels]="simpleDonutChartMonitoreos.labels" [responsive]="simpleDonutChartMonitoreos.responsive"
+                        [legend]="simpleDonutChartMonitoreos.legend" [dataLabels]="simpleDonutChartMonitoreos.dataLabels"
+                        [colors]="simpleDonutChartMonitoreos.colors" dir="ltr"></apx-chart>
 
                     </div>
 
                     <div class="col-sm-3">
                         <h4>Otras obligaciones</h4>
-                        <apx-chart [series]="simpleDonutChart.series" [chart]="simpleDonutChart.chart"
-                        [labels]="simpleDonutChart.labels" [responsive]="simpleDonutChart.responsive"
-                        [legend]="simpleDonutChart.legend" [dataLabels]="simpleDonutChart.dataLabels"
-                        [colors]="simpleDonutChart.colors" dir="ltr"></apx-chart>
+                        <apx-chart [series]="simpleDonutChartOtros.series" [chart]="simpleDonutChartOtros.chart"
+                        [labels]="simpleDonutChartOtros.labels" [responsive]="simpleDonutChartOtros.responsive"
+                        [legend]="simpleDonutChartOtros.legend" [dataLabels]="simpleDonutChartOtros.dataLabels"
+                        [colors]="simpleDonutChartOtros.colors" dir="ltr"></apx-chart>
 
                     </div>
                 </div>
